terraform/networking.tf
resource "aws_internet_gateway" "IG" {
  vpc_id = aws_vpc.ecs_vpc.id
}

resource "aws_route_table" "routeTable" {
  vpc_id = aws_vpc.ecs_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.IG.id
  }
}

resource "aws_route_table_association" "routeTableAssociation" {
  route_table_id = aws_route_table.routeTable.id
  subnet_id      = aws_subnet.ecs_public_subnet.id
}

resource "aws_subnet" "ecs_public_subnet" {
  vpc_id            = aws_vpc.ecs_vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-west-2a"
  #  map_public_ip_on_launch = true
}

resource "aws_subnet" "ecs_subnet_b" {
  vpc_id            = aws_vpc.ecs_vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-west-2b"
  #  map_public_ip_on_launch = true
}

resource "aws_security_group" "ecs_security_group" {
  vpc_id = aws_vpc.ecs_vpc.id
  #  ingress {
  #    from_port   = 443
  #    protocol    = "tcp"
  #    to_port     = 443
  #    cidr_blocks = ["49.248.88.42/32"]
  #  }

  ingress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
#    cidr_blocks = ["122.169.65.197/32"]
    security_groups = [aws_security_group.lb_sec_group.id]
  }

  #  ingress {
  #    from_port   = 22
  #    protocol    = "tcp"
  #    to_port     = 22
  #    cidr_blocks = ["49.248.88.42/32"]
  #  }

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "lb_sec_group" {
  vpc_id = aws_vpc.ecs_vpc.id
  ingress {
    from_port   = 3000
    protocol    = "tcp"
    to_port     = 3000
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
